src/k8s/apps/methodconf.com/production/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: methodconf-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
