src/k8s/apps/methodconf.com/production/middleware-links-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: methodconf-links-redirect
spec:
  redirectRegex:
    regex: '(?i)^https?://links\.methodconf\.com(:[0-9]+)?([/?].*)?$'
    replacement: https://linktr.ee/methodconf
    permanent: false
