src/k8s/apps/methodconf.com/production/middleware-www-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: methodconf-www-redirect
spec:
  redirectRegex:
    regex: ^https?://methodconf\.com(.*)
    replacement: https://www.methodconf.com${1}
    permanent: true
