src/k8s/apps/methodconf.com/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: methodconf-com-production
  labels:
    app.kubernetes.io/name: methodconf
    app.kubernetes.io/instance: production
